# llm-cli

./: .gitignore  LICENSE  README.md  config.ini.example  pyproject.toml  requirements.txt
llm_cli/: __init__.py  cli.py  core.py  utils.py
